View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032973 | Community | OCCT:Modeling Algorithms | public | 2022-05-16 10:34 | 2023-03-19 19:10 |
Reporter | Assigned To | ||||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.6.0 | ||||
Target Version | 7.6.3 | Fixed in Version | 7.6.3 | ||
Summary | 0032973: Modeling Algorithms - Regression in BRepExtrema_DistShapeShape compared with 7.5 | ||||
Description | Wrong results for given shapes, see attached picture, left view - wrong solution, right view - solution for version 7.5.0 correct distance is 2185.9739179983058 | ||||
Steps To Reproduce | test case bugs modalg_8 bug32973 or restore [locate_data_file bug29313_Nozzle45.brep] s1 restore [locate_data_file bug29313_RobotArm6.brep] s2 distmini d s1 s2 dval d_val 1088.8513614589781 | ||||
Tags | No tags attached. | ||||
Test case number | bugs/modalg_8/bug32973 | ||||
has duplicate | 0032971 | closed | Modeling Algorithms - Regression in BRepExtrema_DistShapeShape compared with 7.5 | |
has duplicate | 0032972 | closed | Modeling Algorithms - Regression in BRepExtrema_DistShapeShape compared with 7.5 | |
child of | 0028966 | closed | bugmaster | Coding Rules - remove Adaptor2d_HCurve2d, Adaptor3d_HCurve and Adaptor3d_HSurface classes |
|
Screenshot 2022-05-16 102514.png (76,829 bytes) |
|
Branch CR32973 has been created by ifv. SHA-1: 18647caea49a566598567b2f50d1db5e0f65fbac Detailed log of new commits: Author: ifv Date: Mon May 16 11:37:40 2022 +0300 0032973: Modeling Algorithms - Regression in BRepExtrema_DistShapeShape compared with 7.5 BRepExtrema/BRepExtrema_ExtCF.cxx - set correct using BRepAdaptor_Curve in Extrema tests/bugs/modalg_8/bug32973 - new test case added |
|
Branch CR32973 is ready for review Branches for integration OCCT - CR32973 Products - not Test result http://jenkins-test-08.nnov.opencascade.com/view/CR32973-master-IFV/view/COMPARE/ |
|
Branch CR32973 has been updated forcibly by azv. SHA-1: 136ef23e4282c66fe675ec21c34e0f372bc6ed69 |
|
Combination - OCCT branch : IR-2022-05-20 master SHA - 84d39c06fa79d4227c1bc415e36e3924f7ff64c6 49e51745631c52b6c452c65adae4d6dfa21a1b1e Products branch : IR-2022-05-20 SHA - 17cda8130dd822da7e07127476a2902326a00742 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18673.29000000065 / 18725.070000000575 [-0.28%] Products Total CPU difference: 11729.870000000092 / 11731.410000000136 [-0.01%] Windows-64-VC14: OCCT Total CPU difference: 20661.390625 / 20657.984375 [+0.02%] Products Total CPU difference: 13282.171875 / 13258.375 [+0.18%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32973 has been deleted by mnt. SHA-1: 136ef23e4282c66fe675ec21c34e0f372bc6ed69 |
occt: master 84d39c06 2022-05-16 11:37:40
Committer: |
0032973: Modeling Algorithms - Regression in BRepExtrema_DistShapeShape compared with 7.5 BRepExtrema/BRepExtrema_ExtCF.cxx - set correct using BRepAdaptor_Curve in Extrema tests/bugs/modalg_8/bug32973 - new test case added |
Affected Issues 0032973 |
|
mod - src/BRepExtrema/BRepExtrema_ExtCF.cxx | Diff File | ||
add - tests/bugs/modalg_8/bug32973 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2022-05-16 10:34 |
|
New Issue | |
2022-05-16 10:34 |
|
Assigned To | => msv |
2022-05-16 10:35 |
|
Assigned To | msv => ifv |
2022-05-16 10:35 |
|
Steps to Reproduce Updated | |
2022-05-16 10:35 |
|
Note Added: 0108431 | |
2022-05-16 10:35 |
|
File Added: Screenshot 2022-05-16 102514.png | |
2022-05-16 10:39 |
|
Description Updated | |
2022-05-16 10:39 |
|
Steps to Reproduce Updated | |
2022-05-16 10:42 |
|
Status | new => assigned |
2022-05-16 11:38 | git | Note Added: 0108437 | |
2022-05-16 14:18 |
|
Assigned To | ifv => msv |
2022-05-16 14:18 |
|
Status | assigned => resolved |
2022-05-16 14:18 |
|
Note Added: 0108442 | |
2022-05-16 14:20 |
|
Steps to Reproduce Updated | |
2022-05-16 14:20 |
|
Test case number | => bugs/modalg_8/bug32942 |
2022-05-16 14:21 |
|
Assigned To | msv => azv |
2022-05-16 14:22 |
|
Time allocated | 16.5.2022: 8 h. => set |
2022-05-16 22:06 |
|
Relationship added | has duplicate 0032971 |
2022-05-16 22:06 |
|
Relationship added | has duplicate 0032972 |
2022-05-18 16:45 | git | Note Added: 0108487 | |
2022-05-18 16:45 |
|
Test case number | bugs/modalg_8/bug32942 => bugs/modalg_8/bug32973 |
2022-05-18 16:46 |
|
Assigned To | azv => bugmaster |
2022-05-18 16:46 |
|
Status | resolved => reviewed |
2022-05-19 09:20 | kgv | Relationship added | child of 0028966 |
2022-05-19 09:20 | kgv | Product Version | 7.6.2 => 7.6.0 |
2022-05-21 11:06 |
|
Status | reviewed => tested |
2022-05-21 11:06 |
|
Note Added: 0108528 | |
2022-05-21 11:45 |
|
Changeset attached | => occt master 84d39c06 |
2022-05-21 11:45 |
|
Assigned To | bugmaster => ifv |
2022-05-21 11:45 |
|
Status | tested => verified |
2022-05-21 11:45 |
|
Resolution | open => fixed |
2022-05-21 11:47 | git | Note Added: 0108542 | |
2023-03-19 19:10 | vglukhik | Status | verified => closed |
2023-03-19 19:10 | vglukhik | Fixed in Version | => 7.6.3 |