0032973: Modeling Algorithms - Regression in BRepExtrema_DistShapeShape compared with 7.5

BRepExtrema/BRepExtrema_ExtCF.cxx - set correct using BRepAdaptor_Curve in Extrema
tests/bugs/modalg_8/bug32973 - new test case added