src/BRepExtrema/BRepExtrema_ExtCF.cxx
@@ -82,7 +82,7 @@ void BRepExtrema_ExtCF::Perform(const TopoDS_Edge& E, const TopoDS_Face& F2)
 
   BRepAdaptor_Curve Curv(E);
   Handle(BRepAdaptor_Curve) HC = new BRepAdaptor_Curve(Curv);
-  myExtCS.Perform(HC->Curve(), U1, U2);
+  myExtCS.Perform(*HC, U1, U2);
 
   if(!myExtCS.IsDone())
     return;
